--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ java {
 	sourceCompatibility = '17'
 }
 
+ext {
+	mapstructVersion = "1.6.0.Beta1"
+	lombokVersion = "1.18.30"
+	lombokMapstructBindingVersion = "0.2.0"
+}
+
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -29,9 +36,9 @@ dependencies {
 	implementation 'com.auth0:java-jwt:4.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	runtimeOnly "org.postgresql:postgresql"
