--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
     postgresql:
-        container_name: 'postgresdb'
+        container_name: 'ibolympdb'
         image: postgres
         restart: always
         environment:
@@ -16,7 +16,7 @@ services:
             - main_network
 
     backend:
-        container_name: 'java-spring-boot-backend'
+        container_name: 'ib-olymp-backend'
         restart: always
         build:
             context: .
