--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:18-alpine
+FROM node:22-alpine as build
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json .
 
 RUN npm install
 
@@ -10,6 +10,11 @@ COPY . .
 
 RUN npm run build
 
-EXPOSE 8080
 
-CMD [ "npm", "run", "preview" ]
+FROM nginx:alpine
+WORKDIR /usr/share/nginx/html
+RUN rm -rf *
+COPY --from=build /app/dist .
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
