fix: fixed bug on start

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ib-olymp-api
 
-spring.datasource.url=jdbc:postgresql://${DB_URL}:5433/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_URL}:5432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,6 +15,7 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.max-file-size=10MB
-spring.client.url=${CLIENT_URL}
+spring.client.url="http://frontend:80"
+spring.server.url=localhost
 jwt.secret.key=${JWT_SECRET_KEY}
 file.upload-dir=./data
