--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,9 +12,10 @@ RUN npm run build
 
 
 FROM nginx:alpine
-WORKDIR /usr/share/nginx/html
-RUN rm -rf *
-COPY --from=build /app/dist .
+
+COPY nginx.conf /etc/nginx/conf.d/
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
