--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.client.url="http://frontend:80"
-spring.server.url=localhost
+spring.server.url=5.35.95.100:8080
 jwt.secret.key=${JWT_SECRET_KEY}
 file.upload-dir=./data
