--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,15 +1,11 @@
 server {
     listen 80;
-    server_name server_name;
+    server_name astuctf.ru;
+
+    root /usr/share/nginx/html;
+    index index.html index.htm index.nginx-debian.html;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
         try_files $uri $uri/ /index.html;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
     }
 }
