feat: added ssl to nginx

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,9 +13,12 @@ RUN npm run build
 
 FROM nginx:alpine
 
-COPY nginx.conf /etc/nginx/conf.d/
+COPY ../.nginx/nginx.conf /etc/nginx/conf.d/
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY /etc/letsencrypt/live/astuctf.ru/fullchain.pem /etc/ssl/certs/fullchain.pem
+COPY /etc/letsencrypt/live/astuctf.ru/privkey.pem /etc/ssl/private/privkey.pem
 
 EXPOSE 80
+EXPOSE 433
 CMD ["nginx", "-g", "daemon off;"]
